# clang-tools-pip

./: .buildinfo  .coveragerc  .flake8  .gitignore  .gitpod.yml  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.rst  api.html  cli_args.html  genindex.html  index.html  mkdocs.yml  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  renovate.json  requirements-dev.txt  searchindex.js  setup.py  usage.html
.doctrees/: api.doctree  cli_args.doctree  environment.pickle  index.doctree  usage.doctree
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: bump-version.py  bump-version.yml  codeql.yml  pre-commit.yml  python-app.yml  python-build.yml  python-publish.yml  python-test.yml  renovatebot.yml  test.yml  updatecli.yml
_sources/: api.rst.txt  cli_args.rst.txt  index.rst.txt  usage.rst.txt
_static/: sphinx_immaterial_theme.0fc8e98224dfd3c1b.min.css  sphinx_immaterial_theme.37aa4caab5d1e99b4.min.css  sphinx_immaterial_theme.427463e02ce828aa2.min.css  sphinx_immaterial_theme.4aefa47f0b4ac9379.min.css  sphinx_immaterial_theme.7f6e5c320bf2b1088.min.css  sphinx_immaterial_theme.9706b08c142296958.min.css
clang_tools/: __init__.py  install.py  main.py  util.py  wheel.py  wheel_install.py
docs/: api.md  api.rst  cli_args.md  conf.py  gen_cli_docs.py  index.md  index.rst  usage.md  usage.rst  wheel_cli_args.rst
docs/_static/: extra_css.css
tests/: SHA512SUMS  clang-format-12_linux-amd64.sha512sum  clang-format-12_macosx-amd64.sha512sum  clang-format-12_windows-amd64.sha512sum  clang-format-21_linux-amd64.sha512sum  clang-format-21_linux-arm64.sha512sum  clang-format-21_macos-amd64.sha512sum  clang-format-21_macos-arm64.sha512sum  clang-format-21_macos-intel-amd64.sha512sum  clang-format-21_macosx-amd64.sha512sum  clang-format-21_macosx-arm64.sha512sum  clang-format-21_windows-amd64.sha512sum  clang-format-21_windows-arm64.sha512sum  clang-query-12_linux-amd64.sha512sum  clang-query-12_macosx-amd64.sha512sum  clang-query-12_windows-amd64.sha512sum  test_install.py  test_main.py  test_util.py  test_wheel.py  test_wheel_install.py
updatecli/: check-tag.sh  update-tag.sh  values.yaml
updatecli/updatecli.d/: clang-tools-static-binaries.yaml
